# sftp-service-demo

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  dagster_cloud.yaml  pyproject.toml  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml  hybrid_deploy.yml
data/: customers.csv  products.csv
output/: data.csv
src/: main.py
src/common/utils/: logging.py
src/dagster_project/: constants.py  definitions.py
src/dagster_project/defs/: jobs.py  partitions.py  schedules.py  sensor.py
src/dagster_project/defs/assets/: daily_upload.py
src/services/: faker_service.py  sftp_service.py
src/sftp/models/: config.py
src/sftp/services/: faker_service.py  sftp_service.py
src/tests/: test_faker_service.py  test_sftp_service.py
src/utils/: logging.py
tests/: test_faker_service.py  test_sftp_service.py
tests/output/: data.csv
tests/services/: test_faker_service.py  test_sftp_service.py
