[project]
name = "sftp-dlthub-dagster-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.4.2",
    "paramiko>=3.5.1",
    "polars>=1.31.0",
    "polars-lts-cpu>=1.31.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.4",
    "task>=0.2.0",
    "types-paramiko>=3.5.0.20250708",
    "typing-extensions==4.7.1",
]
