[project]
name = "sftp-dlthub-dagster-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.3",
    "dagster-dg-cli>=1.11.3",
    "dagster-ssh>=0.27.3",
    "dagster-webserver>=1.11.3",
    "faker>=37.4.2",
    "paramiko>=3.5.1",
    "polars>=1.31.0",
    "polars-lts-cpu>=1.31.0",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.4",
    "types-paramiko>=3.5.0.20250708",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
code_location_target_module = "dagster_project.definitions"
